1.17/README.md
<!--
@format
cSpell:word Autcraft HAHAHAHAHAHAHAHAHAHAHA
-->

# AC-Modpack 1.17

Modpack for Autcraft that ~~tries it's hardest to follow~~ follows the approved mod list. Current 1.17 version is `1.17-1.1.0`.

## Mod list

See [Approved Mod List](https://www.autcraft.com/wiki/m/34575523/page/Approved_Mods), most of the updated fabric mods are here. If any are missing, feel free to ask why.

### Library List

Any mod that is described as being a library mod. Recommended to download.

## Installation Instructions

1. [Download the ZIP file linked to this line](1.17-AC-Modpack.zip)
2. Install/make sure you have installed [MultiMC](https://multimc.org/)
3. When you have installed MultiMC, open it
4. Drag the ZIP file you installed into the window.
5. Open that instance, and then it will fetch the Modpack infomation and show you the mods list.
6. Select the mods you want to download, and then click ok.
7. It will then load the game with the mods installed.
8. **S T O N K S**
