1.18/README.md
<!--
@format
cSpell:word Autcraft HAHAHAHAHAHAHAHAHAHAHA
-->

# AC-Modpack 1.18

Modpack for Autcraft that follows the approved mod list. Current 1.18 version is `1.18-1.0.0`.

## Mod list

See [Approved Mod List](https://www.autcraft.com/wiki/m/34575523/page/Approved_Mods), most of the updated fabric mods are here. If any are missing, feel free to ask why. Remember to also download the required mods.

Although, some mods are not updated to 1.18 yet, a list of such mods is contained in the spoiler

<details>
  <summary>Outdated mods</summary>

- Hydrogen

- Connected Block Textures

- ConnectedTexturesMod Fabric

</details>

Please note that some mods have lists of required/incompatible mods. These are not complete at this time, and if you run into any problems installing the modpack or mods [contact me](#questions)

## Installation Instructions

1. [Download the ZIP file linked to this line](1.18-AC-Modpack.zip)
2. Install/make sure you have installed [MultiMC](https://multimc.org/)
3. When you have installed MultiMC, open it
4. Drag the ZIP file you installed into the window.
5. Open that instance, and then it will fetch the Modpack infomation and show you the mods list.
6. Select the mods you want to download, and then click ok.
7. It will then load the game with the mods installed.

## Questions? Concerns? Improvements?

Contact me about them! I go by `Just__a__Goat` (two underscores each) in most places, you should be able to find me that way. Drop me a /mail in game or ask on my wall, I'll check in and be happy to help with whatever you need.
